--- a/_includes/worldmap.html
+++ b/_includes/worldmap.html
@@ -1,1 +1,1 @@
- register at clustrmap.com and paste your code here
+<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=kg1xk2auU1ZDeo2AAmAUafTWoSu3vaO0-7mrkKyK4Ow"></script>
