--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,4 +1,4 @@
-/*<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
    <head>
       {% include head.html %} 
@@ -58,4 +58,4 @@
    {% include markdown-enhancements/highlight.html %}
    {% endif %}
 </html>
-*/
+
