--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,7 +20,7 @@
             <div class="header-links">
                <a class="link" href="https://medium.com/@xinyixiang1129">Posts</a>
                <!-- <a class="link" href="/repo" >Codes</a> -->
-               <a class="link" href="/about" >About</a>
+               <a class="link" href="https://github.com/xinyixiang">Repos</a>
             </div>
          </div>
          <a class="down" href="#about" data-scroll><i class="icon fas fa-chevron-down fa-lg" aria-hidden="true" style="z-index: 2;"></i></a>
