--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,11 @@
 <footer>
    <p style="margin-left: auto; margin-right: auto;"> 
-      &copy; {{ site.posts[-1].date | date: '%Y' }}-{{ site.time | date: '%Y' }}, {{ site.author.name }}. This site is open source and handcrafted with HTML/CSS.
+      &copy; {{ site.posts[-1].date | date: '%Y' }}-{{ site.time | date: '%Y' }}, {{ site.author.name }}. This site is open source. {% if page.edit %}<a href="https://github.com/{{site.github_username}}/{{site.github_username}}.github.io/commits/master/{{ page.path }}" > Version history</a>.{% endif %} <a href="https://github.com/{{site.github_username}}/{{site.github_username}}.github.io/edit/master/{{ page.path }}" target="_blank">Improve this page</a>. <a href="https://github.com/{{site.github_username}}/{{site.github_username}}.github.io/blob/master/LICENSE.md" target="_blank">License</a>. <a href="{{site.url}}{{site.baseurl}}/info/disclaimer" target="_blank">Disclaimer</a>. 
    </p>
 </footer>
+      {% if include.analytics == false %}
+	   {% else %}
+   {% include clustrmap.html style="hiddenpng"%}
+	   {% endif %}
 
 <link rel="stylesheet" href="{{site.url}}{{site.baseurl}}/assets/css/footer.css" >
