--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,7 +18,7 @@
                <span class="site-description">{{site.description}}</span>
             </h1>
             <div class="header-links">
-               <a class="link" href="https://wordpress.com/home/xinyix.wordpress.com">Posts</a>
+               <a class="link" href="https://xinyix.wordpress.com/">Posts</a>
                <!-- <a class="link" href="/repo" >Codes</a> -->
                <a class="link" href="https://github.com/xinyixiang">Repos</a>
             </div>
