--- a/_includes/navitem.html
+++ b/_includes/navitem.html
@@ -2,7 +2,8 @@
 <a class="sidebar-nav-item" href="{{site.url}}{{site.baseurl}}/blog" >Posts</a>
 <a class="sidebar-nav-item" href="{{site.url}}{{site.baseurl}}/blog/categories" >Categories</a>
 <a class="sidebar-nav-item" href="{{site.url}}{{site.baseurl}}/blog/tags" >Tags</a>
-<a class="sidebar-nav-item" href="{{site.url}}{{site.baseurl}}/about"  >About</a>
+<!--<a class="sidebar-nav-item" href="{{site.url}}{{site.baseurl}}/about"  >About</a>-->
+<!--direct to repos-->
 {% if site.github_username %}
 <a class="sidebar-nav-item" href="https://github.com/{{site.github_username}}" target="_blank">
 GitHub</i>
