add homepage blog preview and status tag

--- a/_includes/secret_index.html
+++ b/_includes/secret_index.html
@@ -23,10 +23,10 @@
    </head>
    <body>
       <div class="topnav" id="topnav">
-         <a href="https://vvvvvicabd.github.io/xinyixiang.github.com/"   class="active"   >Home</a>
-         <a href="https://yk-liu.github.io/blog" target="_blank"  >Posts</a>
-         <a href="https://yk-liu.github.io/about"  >About</a>
-         <a href="https://github.com/yk-liu" target="_blank" style="text-decoration:none;float: right;">
+         <a href="https://github.com/xinyixiang"   class="active"   >Home</a>
+         <a href="https://xinyixiang.github.io/PersonalWebsiteXinyi/blog" target="_blank"  >Posts</a>
+         <a href="https://xinyixiang.github.io/PersonalWebsiteXinyi/about"  >About</a>
+         <a href="https://github.com/xinyixiang" target="_blank" style="text-decoration:none;float: right;">
          <i class="fab fa-github fa-lg" ></i>
          </a>
       </div>
