rename navigation items

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,9 +18,9 @@
                <span class="site-description">{{site.description}}</span>
             </h1>
             <div class="header-links">
-               <a class="link" href="https://xinyixiang.github.io/PersonalWebsiteXinyi/blog">Posts</a>
+               <a class="link" href="https://xinyixiang.github.io/PersonalWebsiteXinyi/blog">Blogs</a>
                <!-- <a class="link" href="/repo" >Codes</a> -->
-               <a class="link" href="https://github.com/xinyixiang">Repos</a>
+               <a class="link" href="https://github.com/xinyixiang">GitHub</a>
             </div>
          </div>
          <a class="down" href="#about" data-scroll><i class="icon fas fa-chevron-down fa-lg" aria-hidden="true" style="z-index: 2;"></i></a>
